Bug 67904 - Values of variables are not unquoted
Summary: Values of variables are not unquoted
Status: RESOLVED FIXED
Alias: None
Product: pkg-config
Classification: Unclassified
Component: src (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pkg-config
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-08 14:21 UTC by Marek Kasik
Modified: 2016-01-29 22:40 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Unquote values of requested variables (1.40 KB, text/plain)
2013-08-08 14:21 UTC, Marek Kasik
Details

Description Marek Kasik 2013-08-08 14:21:54 UTC
Created attachment 83837 [details]
Unquote values of requested variables

When requesting a value of a variable, pkg-config returns its value together with quotes if they are specified in the corresponding pc file.
Attached patch unquotes values of variables before returning them.

Marek
Comment 1 Dan Nicholson 2013-09-15 17:37:42 UTC
Applied in 50c2867f with an added test case.
Comment 2 Marek Kasik 2013-09-19 11:09:11 UTC
(In reply to comment #1)
> Applied in 50c2867f with an added test case.

Thank you very much.

Where can I find the commit? I don't see it in the master.
Comment 3 Dan Nicholson 2013-09-21 14:50:20 UTC
Sorry, forgot to push the commit. It's on master now.

http://cgit.freedesktop.org/pkg-config/commit/?id=50c2867f


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.